# bevforge-common

./: package.json  pyproject.toml
_sources/BevForge unification/: CANVAS-KEG-TRACKING-DESIGN.md  CANVAS-RESTORED.md  CONTROL-DATASET-READY.md  CONTROL-DATASET.md  NEW-CHAT-INSTRUCTIONS.md  OPS-AUDIT-REPORT.md  OPS-COMPLETE-STATUS.md  OPS-CORE.md  OPS-ORDERS-AUDIT.md  OPS-UI-CONTRACT.md  OS-README.md  README.md  REORGANIZE-INSTRUCTIONS.md  SYSTEM-STATUS.md  move-to-ops.cjs  package.json  pnpm-workspace.yaml  reorganize-to-ops.sh
_sources/BevForge unification/OS/: OS-CONTROL-SCHEMA-DESIGN.md  OS-DESIGN-DECISIONS.md  OS-IMPLEMENTATION-ROADMAP.md  OS-INTEGRATION-GUIDE.md  OS-MODULE-GUIDE.md  PHASE-3.1-COMPLETION-REPORT.md  PHASE-3.2-COMMAND-PIPELINE-GUIDE.md  PHASE-4-SEED-DATA-COMPLETE.md  PHASE-5-TEST-RESULTS.md  PHASE-5-TESTING-GUIDE.md  PHASE-6-COMPLETION-REPORT.md  PHASE-7-WEBSOCKET-PLAN.md  START-HERE-FOR-NEW-CHAT.md  package-lock.json  tailwind.config.js
_sources/BevForge unification/ops/: DATA-MODEL-QUESTIONS.md  MIGRATION-GUIDE.md  MONOREPO-SETUP.md  OS-API-CONTRACT.md  drizzle.config.ts  vite.config.ts
apps/ops-ui/: env.example  package.json  tsconfig.json  vite.config.ts
apps/ops-ui/drizzle/: 0001_yummy_wallop.sql  manual-migration-001.sql
apps/ops-ui/src/: App.tsx  routes.tsx
apps/os-ui/: package.json  vite.config.ts
apps/os-ui/drizzle/: 0000_busy_morg.sql  (+1 more)
bevforge_common/: settings.py
docs/: INTEGRATION.md
ui/: README.md
ui/brand/: generate-favicons.sh
ui/static/: theme.css
ui/templates/: _base.html  _footer.html  _nav.html
(+141 files in other folders)
